<resources>
    <string name="app_name">GitHubService</string>

    <string name="fmt_sign_in_up_hint_text_password">Пароль</string>
    <string name="fmt_sign_up_in_hint_text_login">Login</string>
    <string name="fmt_sign_up_in_required">Обязательно*</string>
    <string name="fmt_sign_in_text_enter">Войти</string>

    <string name="recycler_view_repositories_name">Job-Search-hh</string>
    <string name="recycler_view_repositories_description">Мобильный клиент для GitHub</string>
    <string name="recycler_view_name_owner">Dmitry</string>
    <string name="recycler_view_forks">forks: </string>
    <string name="recycler_view_watches">watches: </string>

    <string name="commit_hash_data">hash: a349857bv3498t62332</string>
    <string name="commit_hash">hash: a349857bv3498t62332</string>
    <string name="commit_text">feat: добавлены новые стили для элементов</string>
    <string name="commit_date">01.11.2022</string>
    <string name="commit_author">Balthazar</string>

    <string name="error">Произошла ошибка</string>
    <string name="error_with_get_code">Произошла ошибка с получем кода</string>
    <string name="error_something_went_wrong">Упс, что-то пошло не так</string>
    <string name="error_network">Проверьте подключение к интернету</string>
</resources>