<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background"
    android:id="@+id/commit_container_linear_layout">

        <TextView
            android:id="@+id/hash_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewOrdinaryText"
            android:text="@string/commit_hash_data"/>

        <TextView
            android:id="@+id/commit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewOrdinaryText"
            android:text="@string/commit_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewOrdinaryText"
            android:text="@string/commit_author"/>

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewOrdinaryText"
            android:layout_marginStart="@dimen/spacer_10"
            android:text="@string/commit_date"/>

    </LinearLayout>

</LinearLayout>