<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Container">

    <TextView
        android:id="@+id/repositories_name_text_view"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view_repositories_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_repositories_text_view"
        style="@style/TextViewOrdinaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginTop="@dimen/spacer_10"
        android:layout_marginStart="@dimen/spacer_10"
        android:layout_marginEnd="@dimen/spacer_10"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/recycler_view_repositories_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/repositories_name_text_view" />

    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_10"
        android:layout_marginTop="@dimen/spacer_10"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintHeight_max="120dp"
        app:layout_constraintWidth_max="120dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_owner_text_view"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_10"
        android:layout_marginTop="@dimen/spacer_10"
        android:layout_marginBottom="@dimen/spacer_10"
        android:text="@string/recycler_view_name_owner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/avatar_image_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image_view" />

    <TextView
        android:id="@+id/count_forks_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_10"
        android:layout_marginStart="@dimen/spacer_10"
        android:text="@string/recycler_view_forks"
        style="@style/TextViewOrdinaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/description_repositories_text_view" />

    <TextView
        android:id="@+id/count_watches_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_10"
        android:layout_marginTop="@dimen/spacer_10"
        android:text="@string/recycler_view_watches"
        style="@style/TextViewOrdinaryText"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/count_forks_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>